feat(broker): collect the output of a multi-instance activity
* add output collection and output element to model API
* create output collection variable when multi-instance body is activated
* create output element variable when inner activity is activated
* update output collection variable when inner activity is completed
* propagate output collection variable when body is completed