@@ -14,6 +14,7 @@ import io.zeebe.engine.util.EngineRule;
 import io.zeebe.model.bpmn.Bpmn;
 import io.zeebe.model.bpmn.BpmnModelInstance;
 import io.zeebe.model.bpmn.builder.MultiInstanceLoopCharacteristicsBuilder;
+import io.zeebe.protocol.record.Assertions;
 import io.zeebe.protocol.record.Record;
 import io.zeebe.protocol.record.intent.JobBatchIntent;
 import io.zeebe.protocol.record.intent.JobIntent;
@@ -21,7 +22,6 @@ import io.zeebe.protocol.record.intent.VariableIntent;
 import io.zeebe.protocol.record.intent.WorkflowInstanceIntent;
 import io.zeebe.protocol.record.value.BpmnElementType;
 import io.zeebe.protocol.record.value.JobRecordValue;
-import io.zeebe.protocol.record.value.WorkflowInstanceRecordValue;
 import io.zeebe.test.util.JsonUtil;
 import io.zeebe.test.util.record.RecordingExporter;
 import io.zeebe.test.util.record.RecordingExporterTestWatcher;
@@ -42,19 +42,23 @@ import org.junit.runners.Parameterized;
 public class MultiInstanceActivityTest {
 
   @ClassRule public static final EngineRule ENGINE = EngineRule.singlePartition();
-
   private static final String PROCESS_ID = "process";
   private static final String ELEMENT_ID = "task";
   private static final String JOB_TYPE = "test";
   private static final String INPUT_COLLECTION_VARIABLE = "items";
   private static final String INPUT_ELEMENT_VARIABLE = "item";
-  private static final List<Integer> INPUT_COLLECTION = Arrays.asList(10, 20, 30);
+  private static final List<Integer> INPUT_COLLECTION = List.of(10, 20, 30);
+  private static final String OUTPUT_COLLECTION_VARIABLE = "results";
+  private static final String OUTPUT_ELEMENT_VARIABLE = "result";
+  private static final List<Integer> OUTPUT_COLLECTION = List.of(11, 22, 33);
 
   private static final Consumer<MultiInstanceLoopCharacteristicsBuilder> INPUT_VARIABLE_BUILDER =
       multiInstance(
           m ->
               m.zeebeInputCollection(INPUT_COLLECTION_VARIABLE)
-                  .zeebeInputElement(INPUT_ELEMENT_VARIABLE));
+                  .zeebeInputElement(INPUT_ELEMENT_VARIABLE)
+                  .zeebeOutputCollection(OUTPUT_COLLECTION_VARIABLE)
+                  .zeebeOutputElement(OUTPUT_ELEMENT_VARIABLE));
 
   @Rule
   public final RecordingExporterTestWatcher recordingExporterTestWatcher =
@@ -317,19 +321,13 @@ public class MultiInstanceActivityTest {
     completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
 
     // then
-    final Record<WorkflowInstanceRecordValue> completedWorkflowInstance =
-        RecordingExporter.workflowInstanceRecords(WorkflowInstanceIntent.ELEMENT_COMPLETED)
-            .withWorkflowInstanceKey(workflowInstanceKey)
-            .filterRootScope()
-            .getFirst();
-
     assertThat(
-            RecordingExporter.variableRecords()
+            RecordingExporter.records()
+                .limitToWorkflowInstance(workflowInstanceKey)
+                .variableRecords()
                 .withWorkflowInstanceKey(workflowInstanceKey)
-                .withScopeKey(workflowInstanceKey)
-                .limit(r -> r.getPosition() < completedWorkflowInstance.getPosition()))
+                .withScopeKey(workflowInstanceKey))
         .extracting(r -> r.getValue().getName())
-        .contains(INPUT_COLLECTION_VARIABLE)
         .doesNotContain(INPUT_ELEMENT_VARIABLE);
   }
 
@@ -467,7 +465,7 @@ public class MultiInstanceActivityTest {
                 .limit(INPUT_COLLECTION.size()))
         .flatExtracting(r -> r.getValue().getJobs())
         .flatExtracting(j -> j.getVariables().keySet())
-        .containsOnly(INPUT_COLLECTION_VARIABLE);
+        .doesNotContain(INPUT_ELEMENT_VARIABLE);
   }
 
   @Test
@@ -506,6 +504,173 @@ public class MultiInstanceActivityTest {
         .containsExactlyElementsOf(INPUT_COLLECTION);
   }
 
+  @Test
+  public void shouldSetOutputCollectionVariable() {
+    // given
+    ENGINE.deployment().withXmlResource(workflow(miBuilder)).deploy();
+
+    // when
+    final var workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, INPUT_COLLECTION)
+            .create();
+
+    completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
+
+    // then
+    final var variableRecord =
+        RecordingExporter.variableRecords()
+            .withName(OUTPUT_COLLECTION_VARIABLE)
+            .withScopeKey(workflowInstanceKey)
+            .getFirst();
+
+    Assertions.assertThat(variableRecord.getValue()).hasValue(JsonUtil.toJson(OUTPUT_COLLECTION));
+  }
+
+  @Test
+  public void shouldCollectOutputInVariable() {
+    // given
+    ENGINE.deployment().withXmlResource(workflow(miBuilder)).deploy();
+
+    // when
+    final var workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, INPUT_COLLECTION)
+            .create();
+
+    completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
+
+    // then
+    final var multiInstanceBody =
+        RecordingExporter.workflowInstanceRecords(WorkflowInstanceIntent.ELEMENT_COMPLETED)
+            .withWorkflowInstanceKey(workflowInstanceKey)
+            .withElementType(BpmnElementType.MULTI_INSTANCE_BODY)
+            .getFirst();
+
+    assertThat(
+            RecordingExporter.variableRecords()
+                .withName(OUTPUT_COLLECTION_VARIABLE)
+                .withScopeKey(multiInstanceBody.getKey())
+                .limit(INPUT_COLLECTION.size() + 1))
+        .extracting(r -> r.getValue().getValue())
+        .contains("[null,null,null]", "[11,null,null]", "[11,22,null]", "[11,22,33]");
+  }
+
+  @Test
+  public void shouldSetOutputElementVariable() {
+    // given
+    ENGINE.deployment().withXmlResource(workflow(miBuilder)).deploy();
+
+    // when
+    final var workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, INPUT_COLLECTION)
+            .create();
+
+    completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
+
+    // then
+    assertThat(
+            RecordingExporter.variableRecords(VariableIntent.CREATED)
+                .withName(OUTPUT_ELEMENT_VARIABLE)
+                .limit(INPUT_COLLECTION.size()))
+        .extracting(r -> r.getValue().getValue())
+        .containsOnly("null");
+
+    assertThat(
+            RecordingExporter.variableRecords(VariableIntent.UPDATED)
+                .withName(OUTPUT_ELEMENT_VARIABLE)
+                .limit(INPUT_COLLECTION.size()))
+        .extracting(r -> r.getValue().getValue())
+        .containsExactlyElementsOf(
+            OUTPUT_COLLECTION.stream().map(JsonUtil::toJson).collect(Collectors.toList()));
+  }
+
+  @Test
+  public void shouldSetEmptyOutputCollectionIfSkip() {
+    // given
+    ENGINE.deployment().withXmlResource(workflow(miBuilder)).deploy();
+
+    // when
+    final long workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, List.of())
+            .create();
+
+    // then
+    final var variableRecord =
+        RecordingExporter.variableRecords()
+            .withName(OUTPUT_COLLECTION_VARIABLE)
+            .withWorkflowInstanceKey(workflowInstanceKey)
+            .getFirst();
+
+    Assertions.assertThat(variableRecord.getValue()).hasValue("[]");
+  }
+
+  @Test
+  public void shouldIgnoreOutputCollectionVariableIfNotDefined() {
+    // given
+    ENGINE
+        .deployment()
+        .withXmlResource(
+            workflow(
+                miBuilder.andThen(m -> m.zeebeOutputCollection(null).zeebeOutputElement(null))))
+        .deploy();
+
+    // when
+    final long workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, INPUT_COLLECTION)
+            .create();
+
+    completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
+
+    // then
+    assertThat(
+            RecordingExporter.records()
+                .limitToWorkflowInstance(workflowInstanceKey)
+                .variableRecords()
+                .withWorkflowInstanceKey(workflowInstanceKey)
+                .withScopeKey(workflowInstanceKey))
+        .extracting(r -> r.getValue().getName())
+        .doesNotContain(OUTPUT_COLLECTION_VARIABLE);
+  }
+
+  @Test
+  public void shouldNotPropagateOutputElementVariable() {
+    ENGINE.deployment().withXmlResource(workflow(miBuilder)).deploy();
+
+    // when
+    final long workflowInstanceKey =
+        ENGINE
+            .workflowInstance()
+            .ofBpmnProcessId(PROCESS_ID)
+            .withVariable(INPUT_COLLECTION_VARIABLE, INPUT_COLLECTION)
+            .create();
+
+    completeJobs(workflowInstanceKey, INPUT_COLLECTION.size());
+
+    // then
+    assertThat(
+            RecordingExporter.records()
+                .limitToWorkflowInstance(workflowInstanceKey)
+                .variableRecords()
+                .withWorkflowInstanceKey(workflowInstanceKey)
+                .withScopeKey(workflowInstanceKey))
+        .extracting(r -> r.getValue().getName())
+        .doesNotContain(OUTPUT_ELEMENT_VARIABLE);
+  }
+
   private void completeJobs(final long workflowInstanceKey, final int count) {
     IntStream.range(0, count)
         .forEach(
@@ -518,14 +683,18 @@ public class MultiInstanceActivityTest {
                   .describedAs("Expected job %d/%d to be created", (i + 1), count)
                   .isTrue();
 
-              ENGINE
-                  .jobs()
-                  .withType(JOB_TYPE)
-                  .withMaxJobsToActivate(1)
-                  .activate()
-                  .getValue()
+              final var jobBatch =
+                  ENGINE.jobs().withType(JOB_TYPE).withMaxJobsToActivate(1).activate().getValue();
+
+              jobBatch
                   .getJobKeys()
-                  .forEach(jobKey -> ENGINE.job().withKey(jobKey).complete());
+                  .forEach(
+                      jobKey ->
+                          ENGINE
+                              .job()
+                              .withKey(jobKey)
+                              .withVariable(OUTPUT_ELEMENT_VARIABLE, OUTPUT_COLLECTION.get(i))
+                              .complete());
             });
   }
 }
